<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".dashboard.DashboardActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        style="@style/Profile.Constraint.Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sport_name"
            android:inputType="text"
            android:autofillHints="name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tag_container"
        style="@style/Profile.Constraint.Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_container">
        <EditText
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sport_tag"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="start"
            android:autofillHints="name" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalFunds"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/info_total_funds"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/totalExpenses"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/info_total_expenses"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/info_balance"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/funds"
                style="@style/Actions.OutlinedButton"
                android:text="@string/action_update_funds"
                android:layout_weight="1"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/inventories"
                style="@style/Actions.OutlinedButton"
                android:text="@string/action_update_expenses"
                android:layout_weight="1"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/equipments"
                style="@style/Actions.OutlinedButton"
                android:text="@string/action_update_equipments"
                android:layout_weight="1"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/createSport"
        style="@style/Actions.Button"
        android:text="@string/action_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actions" />

</androidx.constraintlayout.widget.ConstraintLayout>