<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".dashboard.DashboardActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_container"
        style="@style/Profile.Dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_expense_category"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_container"
        style="@style/Profile.Constraint.Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_container">
        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_expense_desc"
            android:inputType="textMultiLine"
            android:lines="2"
            android:gravity="start"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_container"
        style="@style/Profile.Constraint.Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_container">
        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_expense_price"
            android:inputType="number"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantity_container"
        style="@style/Profile.Constraint.Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_container">
        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_expense_quantity"
            android:inputType="number"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/buyer_container"
        style="@style/Profile.Dropdown"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_container">
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/buyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_expense_buyer"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/added_on_container"
        style="@style/Profile.Constraint.Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyer_container">
        <EditText
            android:id="@+id/addedOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_expense_added_on"
            android:inputType="date"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/added_on_container"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_expense_equipment" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbSettleUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbEquipment"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_expense_settle_up" />

    <Button
        android:id="@+id/addExpense"
        style="@style/Actions.Button"
        android:text="@string/action_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSettleUp" />

</androidx.constraintlayout.widget.ConstraintLayout>