<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".profile.ProfileActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        style="@style/Profile.Input"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_profile_name"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/add_house_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/add_house_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        style="@style/Profile.Input"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_house_container" >
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_profile_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_container"
        style="@style/Profile.Input"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_container" >
        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_profile_contact"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_house_container">

        <Button
            android:id="@+id/deleteMember"
            style="@style/Actions.Button.Delete"
            android:text="@string/action_delete"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/saveMember"
            style="@style/Actions.Button"
            android:text="@string/action_save"
            android:layout_weight="1"
            android:layout_marginStart="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>