<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".profile.ProfileActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        style="@style/Profile.Input"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_profile_name"
            android:inputType="text"
            android:autofillHints="name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wing_container"
        style="@style/Profile.Dropdown"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_container">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/wing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_profile_wing"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/floor_container"
        style="@style/Profile.Dropdown"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wing_container">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/floor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_profile_floor"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/house_container"
        style="@style/Profile.Dropdown"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floor_container">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_profile_house"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveProfile"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:enabled="true"
        android:text="@string/action_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_container" />

</androidx.constraintlayout.widget.ConstraintLayout>